# galspy

./: .gitignore  README.md  pyproject.toml  submit_pbs.sh
commands/: avail.py  load.py  target.py  template.py
commands/bigfile/: viewattr.py  viewdata.py  viewhead.py
commands/rockstar/: rockstar.py
console/: gspy.py
console/commands/: halo.py
debug/: agn_lum_ballpark.py  check_block.py  check_block_nump.py  check_cloudy_input_in_cache.py  check_dust.py  check_galspy.py  check_length.py  check_star_count.py  check_temperature.py  domain_halos.py  halo_hirarchy.py  list_halo_props.py  particle_ihid_index.py  query_test.py  snaps.py  test.py
debug/PBS/: nodestatus.py
debug/check_lr/: look_stars.py
debug/check_mpgadget/: gas_sph.py  pig_particle_order.py  star_mass.py
debug/checks/: age_dist.py  binary_read.py  check_length.py  domain_halos.py  list_halo_props.py  snaps.py  two_Z.py
debug/cooling/: metalcool.py  treecool.py
debug/mpicheck/: test1.py
debug/temperature/: compare.py
deprecated/console/: gspy.py
deprecated/galspec/: Spectra.py  Utility.py
deprecated/galterm/: ansi.py  terminal.py
deprecated/utility/: HaloQuery.py
docs/: dev_doc.md
gui/: gas_distribution.py  halo_explorer.py  template_viewer.py  view_filters.py
job/: submit_pbs.sh
obs/sfrd_vs_z/: Bouwens_2016.txt  Bouwens_2023.txt  Harikane_2023.txt  McLure_2018.txt  Oesch_2018.txt
obs/uvlf/: Bouwens+21.txt  Donnan+24.txt  Finkelstein+15.txt  Harikane+23.txt  uvlf.txt  (+2 more)
scripts/: gspy.py
tools/: cache_stellar_templates.py  cloudy_batch_run.py  download_jwst_filters.py
(+408 files in other folders)
