[project]
name="galspy"
version="0.0.1"
dependencies=[
    "Cython>=3.0.6",
    "numpy>=1.26.0",
    "matplotlib>=3.7.0",
    "h5py>=3.9.0",
    "tqdm>=4.66.1",
    "seaborn>=0.13.0",
    "colossus>=1.3.3",
    "treelib>=1.7.0",
    "bagpipes>=1.0.4",
    "astropy==5.3.4",
    "hoki==1.7.1",
    "bigfile==0.1.51"
    ]